infra/an-deployment.yaml
apiVersion: helm.toolkit.fluxcd.io/v1beta2
kind: HelmRelease
metadata:
  name: airflow
  namespace: cs9-airflow
spec:
  releaseName: airflow
  interval: 5m
  chart:
    spec:
      chart: apache-airflow
      version: 2.10.0
      sourceRef:
        kind: HelmRepository
        name: airflow-helm-repo
        namespace: cs9-airflow-repo
  values:
    service:
      type: ClusterIP
    dags:
      persistence:
        enabled: true
        size: 1Gi
    workers:
      replicas: 1
    executor: "KubernetesExecutor"
    redis:
      enabled: true
    postgresql:
      enabled: true








apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-cs9an-test
#    fluentbit.fluent.io/enabled: "true"
  name: deployment-cs9an-test
  namespace: ns-cs9-test
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: app-cs9an-test
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app-cs9an-test
#        fluentbit.fluent.io/enabled: "true"
    spec:
      containers:
      - image: apache/airflow:2.10.5
        imagePullPolicy: Always
        name: ct-cs9an
        ports:
        - containerPort: 80
          name: cs9an-port
        command: ["printenv"]
        args: ["HOSTNAME", "KUBERNETES_PORT"]
        resources:
#          limits:
#            cpu: 4000m
#            memory: 8192Mi
          requests:
            cpu: 2000m
            memory: 4096Mi
        volumeMounts:
        - mountPath: /secrets/
          name: volume-akv-secret-1
      volumes:
      - csi:
          driver: secrets-store.csi.k8s.io
          nodePublishSecretRef:
            name: secret-akv-sp           # Service principal secret
          readOnly: true
          volumeAttributes:
            secretProviderClass: akv-cs9-test
        name: volume-akv-secret-1
