infra/wn-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-cs9-test
#    fluentbit.fluent.io/enabled: "true"
  name: workbench
  namespace: ns-cs9-test
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: app-cs9-test
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app-cs9-test
#        fluentbit.fluent.io/enabled: "true"
    spec:
      containers:
#      - image: tutum/hello-world
      - image: ghcr.io/fhidev/fhi.fida.cs/skybert-workbench:latest
        imagePullPolicy: Always
        name: ct-cs9
        ports:
        - containerPort: 8787
          name: cs9-port
        resources:
#          limits:
#            cpu: 4000m
#            memory: 8192Mi
          requests:
            cpu: 2000m
            memory: 4096Mi
        volumeMounts:
        - mountPath: /secrets/
          name: volume-akv-secret-1
      volumes:
      - csi:
          driver: secrets-store.csi.k8s.io
          nodePublishSecretRef:
            name: secret-akv-sp           # Service principal secret
          readOnly: true
          volumeAttributes:
            secretProviderClass: akv-cs9-test
        name: volume-akv-secret-1
