infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-cs9-test
  namespace: ns-cs9-test
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: cs9-port # named in deployment.yaml, pointing to 8080
#    targetPort: 8080
  selector:
    app: app-cs9-test
